# wordle-rs

./: Cargo.toml  README.md
src/: dictionary.rs  game_state.rs  guess_reader.rs  guess_writer.rs  lib.rs  main.rs
