[package]
name = "wordle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.3"
clap = { version = "3.1.9", features = ["derive"] }
curl = "0.4.43"
serde_json = "1.0.81"
rand = "0.8.5"